--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,8 +16,12 @@ body {
 }
 
 main {
-    width: 60%;
+    width: 100%;
     margin: 0 auto;
+
+    @media (min-width: 1280px) {
+        width: 60%;
+    }
 }
 
 .center {
