--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,6 @@
 :root {
     --color-lightText: #626161;
+    --color-darkLight: #2b2b2b;
     --color-primaryBackground: #1a1b1e;
     --color-lighterBackground: #222327;
     --color-primary: #1971c2;
@@ -8,11 +9,11 @@
     --color-error: #e03131;
     --color-lightError: #df5656;
 
-    --font-primary: 'Hind Siliguri', sans-serif;
+    --font-primary: 'Inter', sans-serif;
 }
 
 body {
-    font-family: 'Hind Siliguri', sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 main {
